infra/k8s/08-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sfp-network-policy
  namespace: sfp-portal
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: sfp-portal
    - from:
        - podSelector: {}
  egress:
    - to:
        - namespaceSelector: {}
    - to:
        - podSelector: {}
    - ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
